Fix of missing overflow hidden on inline edit

--- a/WebVella.TagHelpers/wwwroot/css/styles.css
+++ b/WebVella.TagHelpers/wwwroot/css/styles.css
@@ -46,6 +46,9 @@
 	cursor:pointer;
 }
 
+.wv-field.inline-edit .view-wrapper .form-control{
+	overflow:hidden;
+}
 
 /*#endregion*/
 
